--- a/baitap1/about.html
+++ b/baitap1/about.html
@@ -12,12 +12,12 @@
     <div class="topnav" id="myTopnav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="contact.html">Services</a>
+        <a href="services.html">Services</a>
         <a href="mywork.html">My work</a>
         <a href="contact.html">Contact</a>
     </div>
     <div>
-        
+        <p>Tôi là Việt, hiện đang học tập tại trường Phân hiệu Đại học Đà nẵng tại Kon Tum</p>
     </div>
 </body>
 </html>
