--- a/baitap1/index.html
+++ b/baitap1/index.html
@@ -12,7 +12,7 @@
     <div class="topnav" id="myTopnav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="contact.html">Services</a>
+        <a href="services.html">Services</a>
         <a href="mywork.html">My work</a>
         <a href="contact.html">Contact</a>
     </div>
