--- a/baitap1/mywork.html
+++ b/baitap1/mywork.html
@@ -17,7 +17,7 @@
         <a href="contact.html">Contact</a>
     </div>
     <div>
-        
+        <p>Tạo giao diện bằng HTML và CSS dựa trên thiết kế có sẵn</p>
     </div>
 </body>
 </html>
