--- a/baitap1/services.html
+++ b/baitap1/services.html
@@ -12,12 +12,12 @@
     <div class="topnav" id="myTopnav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="contact.html">Services</a>
+        <a href="services.html">Services</a>
         <a href="mywork.html">My work</a>
         <a href="contact.html">Contact</a>
     </div>
     <div>
-
+        <p>Tôi sẽ tạo những giao diện website dựa trên thiết kế website của các bạn</p>
     </div>
 </body>
 </html>
