--- a/baitap-buoi3/imdex.html
+++ b/baitap-buoi3/imdex.html
@@ -11,11 +11,11 @@
     <div class="container">
         <form id="my-form">
             <label>Input:</label>
-            <input type="text" class="TextInput">
+            <input type="text" class="textTodo">
             <button class="btn" type="submit">Submit</button>
         </form>
 
-        <ul id="listInput">
+        <ul id="listTodo">
 
         </ul>
     </div>
